infra/k8s/commands-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commands-mongo
  template:
    metadata:
      labels:
        app: commands-mongo
    spec:
      containers:
        - name: commands-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: commands-mongo-srv
spec:
  selector:
    app: commands-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
