infra/k8s/devices-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devices
  template:
    metadata:
      labels:
        app: devices
    spec:
      containers:
        - name: devices
          image: racf3008/devices
---
apiVersion: v1
kind: Service
metadata:
  name: devices-srv
spec:
  selector:
    app: devices
  type: ClusterIP
  ports:
    - name: devices
      protocol: TCP
      port: 3000
      targetPort: 3000
