infra/k8s/mosquitto-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.15
          ports:
            - containerPort: 1883
            - containerPort: 9001
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config
            - name: mosquitto-data
              mountPath: /mosquitto/data
            - name: mosquitto-log
              mountPath: /mosquitto/log
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-data
          emptyDir: {}
        - name: mosquitto-log
          emptyDir: {}
---
# Servicio interno (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-internal
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: mqtt
  selector:
    app: mosquitto
---
# Servicio externo (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-external
  labels:
    app: mosquitto
spec:
  type: NodePort
  ports:
    - port: 1883
      targetPort: 1883
      nodePort: 31883
  selector:
    app: mosquitto
