infra/k8s/readings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readings-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readings
  template:
    metadata:
      labels:
        app: readings
    spec:
      containers:
        - name: readings
          image: racf3008/readings
---
apiVersion: v1
kind: Service
metadata:
  name: readings-srv
spec:
  selector:
    app: readings
  type: ClusterIP
  ports:
    - name: readings
      protocol: TCP
      port: 3000
      targetPort: 3000
