infra/k8s/tokens-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokens-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokens
  template:
    metadata:
      labels:
        app: tokens
    spec:
      containers:
        - name: tokens
          image: racf3008/tokens
---
apiVersion: v1
kind: Service
metadata:
  name: tokens-srv
spec:
  selector:
    app: tokens
  type: ClusterIP
  ports:
    - name: tokens
      protocol: TCP
      port: 3000
      targetPort: 3000
