infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/devices/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: devices-srv
                port:
                  number: 3000
          # - path: /api/logs/?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: logs-srv
          #       port:
          #         number: 3000
          # - path: /api/readings/?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: readings-srv
          #       port:
          #         number: 3000
          # - path: /api/commands/?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: commands-srv
          #       port:
          #         number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
